bk_ida/gccida/c3/ggc_get_size
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_get_size/src/ggc-page.c:1500:47: error: expected expression
return object_size_table[( *( page_entry_0 ***)( ( char *)G.lookup + ( ( ( unsigned __int64)p >> 21) & 0x7F8)))[( ( unsigned __int64)p >> SLOBYTE( G.lg_pagesize)) & ~( -1 << ( 24 - LOBYTE( G.lg_pagesize)))]->order]; 
                                              ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_get_size/src/ggc-page.c:1500:31: error: use of undeclared identifier 'page_entry_0'
return object_size_table[( *( page_entry_0 ***)( ( char *)G.lookup + ( ( ( unsigned __int64)p >> 21) & 0x7F8)))[( ( unsigned __int64)p >> SLOBYTE( G.lg_pagesize)) & ~( -1 << ( 24 - LOBYTE( G.lg_pagesize)))]->order]; 
                              ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ggc_get_size/src/obj/ggc-page.o] Error 1
